Fix layout when not full screen
Add min-height: 100vh to body and remove other set
heights from other elements. This will cause the
page to fit all at once only if the device screen
is large enough, other wise it'll not fit all at
once. But atleast, that means the layout won't
break for smaller viewport heights.

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
     flex-direction: row;
     margin: 0;
     font-family: sans-serif;
+    min-height: 100vh;
 }
 
 .side-bar {
@@ -17,7 +18,6 @@ body {
     flex-direction: column;
     background-image: url('./markus-spiske-1LLh8k2_YFk-unsplash.jpg');
     background-repeat: no-repeat;
-    height: 100vh;
     width: 40vw;
 }
 
@@ -48,7 +48,6 @@ body {
 .text-container {
     padding: 3rem;
     font-size: 1.5rem;
-    height: 39vh;
     box-sizing: border-box;
 }
 
